[package]
name = "needs_rebuild"
version = "1.1.0"
description = "A utility to check if files need to be rebuilt based on their modification times."
authors = ["CjS77"]
license = "MIT"
edition = "2024"

[dependencies]
filetime = "0.2"
glob = "0.3"
thiserror = "2.0.17"
walkdir = "2.5"

[dev-dependencies]
env_logger = "0.11.8"
log = "0.4.20"